modules/gdscript/tests/scripts/analyzer/errors/call_not_existing_static_method.gd
# GH-73283

class MyClass:
	pass

func test():
	MyClass.not_existing_method()
